fix text align commit

--- a/src/page/addAccount/assets/addAccount.css
+++ b/src/page/addAccount/assets/addAccount.css
@@ -17,6 +17,7 @@
 		h1{
 			font-family: 'Gilroy';
 			color: #fff;
+			text-align: center;
 		}
 
 		.input_item_checkbox{
