--- a/src/page/menu/assets/menu.css
+++ b/src/page/menu/assets/menu.css
@@ -12,6 +12,7 @@
 		flex-direction: column;
 		gap: 30px;
 		h1{
+			text-align: center;
 			font-family: 'Gilroy';
 			color: #fff;
 		}
